--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".view.api.ApiActivity"
+            android:name=".view.univers.ApiActivity"
             android:exported="true">
         </activity>
 
