--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
         </activity>
 
         <activity
+            android:name=".view.recycle.RecyclerActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".view.api.ApiBottomActivity"
             android:exported="true">
 
